Updated Version Resolver to read POM files in dependency management Updated License Managment in read files